# LP-enose

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  main.c
main/lp_core/: main.c
